# ID3QNE-algorithm

./: README.md  client.py  graders.py  inference.py  prepare_submission.py  pyproject.toml
server/: app.py
